tests/spec/core_functions/color/hwb/error/two_args.rs
//! Tests auto-converted from "sass-spec/spec/core_functions/color/hwb/error/two_args.hrx"

// Ignoring "test", error tests are not supported yet.
